FixedTableOverflow

--- a/src/app/pages/dashboard/dashboard-admin/dashboard-admin.component.scss
+++ b/src/app/pages/dashboard/dashboard-admin/dashboard-admin.component.scss
@@ -12,24 +12,24 @@
   transition: all .5s ease;
 }
 
-body {
-  font-family: Helvetica;
-  -webkit-font-smoothing: antialiased;
-  background: rgba(71, 147, 227, 1);
+.wrapper {
+  width: 100%;
+  height: 100vh;
 }
 
 h2 {
   text-align: center;
   font-size: 18px;
+  height: 10%;
   text-transform: uppercase;
   letter-spacing: 1px;
   color: $text-color;
-  padding: 10px 0;
+  margin: 0;
 }
 
 .header {
   width: 100%;
-  height: 10vh;
+  height: 10%;
   display: flex;
   flex-direction: row;
   justify-content: space-around;
@@ -37,7 +37,11 @@ h2 {
   padding: 15px;
 }
 
+
+
 /* Selector Styles */
+
+
 
 $glass: $bg-color-lighter;
 $glass-icon: $bg-color-lighter;
@@ -78,10 +82,37 @@ $option: $bg-color-lighter;
   }
 }
 
+
+
+/* Button */
+
+
+
+.button-change {
+  transition-duration: 0.4s;
+  background-color: red;
+  color: $text-color;
+  border-radius: 2px;
+  border-color: transparent;
+  border: 0;
+}
+
+.button-change:hover {
+  background-color: rgba($color: red, $alpha: 0.5);
+  color: $text-color;
+}
+
+
+
 /* Table Styles */
 
+
+
 .table-wrapper {
-  margin: 10px 70px 70px;
+  overflow-y: auto;
+  overflow-x: auto;
+  height: 70%;
+  margin: 10px 10px;
   box-shadow: 0px 35px 50px rgba(0, 0, 0, 0.2);
 }
 
@@ -101,7 +132,8 @@ $option: $bg-color-lighter;
 .fl-table th {
   text-align: center;
   padding: 8px;
-  max-width: 100px;
+  // min-width: 100px;
+  max-width: 250px;
 }
 
 // // Remove scrollbar
@@ -145,93 +177,19 @@ td {
   background: $text-color;
 }
 
-/* Input */
 
-$primary: #11998e;
-$secondary: #38ef7d;
-$white: #fff;
-$gray: #9b9b9b;
 
-.form__group {
-  position: relative;
-  padding: 0;
-  width: 100%;
-  height: 100%;
-}
-
-.form__field {
-  font-family: inherit;
-  width: 100%;
-  border: 0;
-  // border-bottom: 2px solid $gray;
-  outline: 0;
-  font-size: 14px;
-  color: black;
-  padding: 0;
-  background: transparent;
-  transition: border-color 0.2s;
-
-  &::placeholder {
-    color: transparent;
-  }
-
-  &:placeholder-shown ~ .form__label {
-    font-size: 1.3rem;
-    cursor: text;
-    top: 20px;
-  }
-}
-
-.form__label {
-  position: absolute;
-  top: 0;
-  display: block;
-  transition: 0.2s;
-  font-size: 1rem;
-  color: $gray;
-}
-
-.form__field:focus {
-  ~ .form__label {
-    position: absolute;
-    top: 0;
-    display: block;
-    transition: 0.2s;
-    font-size: 1rem;
-    color: $primary;
-    font-weight:700;
-  }
-  padding-bottom: 6px;
-  font-weight: 700;
-  border-width: 3px;
-  border-image: linear-gradient(to right, $primary,$secondary);
-  border-image-slice: 1;
-}
-/* reset input */
-.form__field{
-  &:required,&:invalid { box-shadow:none; }
-}
-
-/* Button */
-
-.button-change {
-  transition-duration: 0.4s;
-  background-color: red;
-  color: $text-color;
-  border-radius: 2px;
-  border-color: transparent;
-  border: 0;
-}
-
-.button-change:hover {
-  background-color: rgba($color: red, $alpha: 0.5);
-  color: $text-color;
-}
 /* Responsive */
+
+
 
 @media (max-width: 767px) {
   .fl-table {
     display: block;
+    width: 100%;
+  }
+
+  .wrapper {
     width: 100%;
   }
 
