--- a/src/app/pages/dashboard/dashboard.component.scss
+++ b/src/app/pages/dashboard/dashboard.component.scss
@@ -11,17 +11,20 @@
 }
 
 .wrapper {
-  width: 100vw;
+  width: 100%;
   min-width: 320px;
-  height: 100vh;
+  height: 100%;
+  overflow-y: hidden;
+  overflow-x: hidden;
   background-color: $bg-color;
 }
 
 .container {
-  width: 95vw;
+  width: 95%;
   margin: 0 auto;
   display: flex;
   flex-direction: row;
+
 }
 
 .sidebar {
@@ -74,7 +77,7 @@
   color: $text-color;
   margin-left: 5px;
   text-decoration: none;
-  font-size: 24px;
+  font-size: 16px;
 }
 
 .sidebar-info {
@@ -89,10 +92,23 @@
 
 .sidebar-info-greetings {
   color: $text-color;
-  font-size: 16px;
+  font-size: 12px;
 }
 
 .content {
   width: 100%;
   height: 100%;
+}
+
+@media (max-width: 768px) {
+  .sidebar {
+    display: none;
+  }
+
+  .navbar {
+    display: flex;
+    width: 100%;
+    height: 10vh;
+    background-color: red;
+  }
 }
